samples/_failures_safe/1761438286_6556aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05f12f74.c: In function ‘main’:
./samples/SAFE/__tmp_05f12f74.c:145:16: error: missing terminating " character
  145 |         printf("Matrix
      |                ^~~~~~~
./samples/SAFE/__tmp_05f12f74.c:145:9: error: expected expression at end of input
  145 |         printf("Matrix
      |         ^~~~~~
./samples/SAFE/__tmp_05f12f74.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05f12f74.c:145:9: error: expected declaration or statement at end of input
